# AaDS-SET3-A2

./: CMakeLists.txt  README.md  test.cpp
A2/: plotting.py  tests.csv
SortTester/: SortTester.cpp  SortTester.h
Sorter/: Sorter.cpp  Sorter.h
TestData/: tests.csv
